Reformat Java files